tests/ui/traits/non_lifetime_binders/foreach-partial-eq-next-solver.stderr
error[E0277]: can't compare `T` with `T`
  --> $DIR/foreach-partial-eq-next-solver.rs:12:5
   |
LL |     auto_trait();
   |     ^^^^^^^^^^^^ no implementation for `T < T` and `T > T`
   |
   = help: the trait `PartialOrd` is not implemented for `T`
note: required by a bound in `auto_trait`
  --> $DIR/foreach-partial-eq-next-solver.rs:8:27
   |
LL | fn auto_trait()
   |    ---------- required by a bound in this function
LL | where
LL |     for<T> T: PartialEq + PartialOrd,
   |                           ^^^^^^^^^^ required by this bound in `auto_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
